# bravos-webull-agent

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  SPEC.md  bootstrap.sh  pyproject.toml  setup_oauth.py  sync_secrets.py  template.yaml
events/: test_aggressive.json  test_cash.json  test_moderate.json
src/: Makefile  config.py  handler.py  requirements.txt
src/email_provider/: authres.py  gmail.py  signal.py
src/notifier/: messages.py  telegram.py
src/state/: s3_state.py
src/trader/: gates.py  ids.py  market_hours.py  plan.py  reconcile.py  webull.py
tests/: fakes.py  test_authres.py  test_config.py  test_gates.py  test_gmail.py  test_handler.py  test_ids.py  test_market_hours.py  test_plan.py  test_signal.py  test_state.py  test_telegram.py  test_webull_build.py
