[project]
name = "bravos-webull-agent"
version = "0.1.0"
description = "Serverless Gmail watcher → Telegram alert + Webull trade on Bravos Model Signal"
requires-python = ">=3.12,<3.13"
dependencies = [
    # Gmail API (read-only)
    "google-api-python-client>=2.0",
    "google-auth>=2.0",
    "google-auth-oauthlib>=1.0",
    # HTTP (Telegram + general)
    "requests>=2.31",
    # Webull OpenAPI official SDK (US trade + market data)
    "webull-python-sdk-core>=0.1.6",
    "webull-python-sdk-trade>=0.1.6",
    "webull-python-sdk-mdata>=0.1.6",
    # boto3 is provided by the Lambda runtime; pinned here for local runs/tests
    "boto3>=1.34",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "freezegun>=1.4",      # deterministic market-hours / timestamp tests
    "ruff>=0.4",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.uv.extra-build-dependencies]
# grpcio-tools (pulled in by webull-python-sdk-trade-events-core) uses pkg_resources
# at build time without declaring it. We don't use gRPC streaming, but the dep is
# transitive — this tells uv to inject setuptools (which provides pkg_resources) at
# build time only.
grpcio-tools = ["pkg_resources"]

[tool.ruff]
line-length = 100
target-version = "py312"
